--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Fear is Back!</title>
     <link rel="icon" type="image/png" href="favicon1.png">
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <p align="center"> <img src="gifs/knighthorse.gif" width="80" height="55"> <img src="gifs/title.gif" width="700"> <img src="gifs/knightRight.gif" width="80" height="55"> </p>
